# AlchemyCompiler

./: .gitignore  .lldbinit  CMakeLists.txt  README.md  astgen.js  ax_preamble.h  main.cpp  project.py  tokenparsergen.js
AlchemySystem/: Bool.ax  Collections.ax  Float.ax  Int.ax
Src/: DLLExport.h  Panic.cpp  Panic.h  PrimitiveTypes.h
Src/Allocation/: BytePoolAllocator.cpp  BytePoolAllocator.h  LinearAllocator.cpp  LinearAllocator.h  PagedAllocator.h  PodAllocation.cpp  PodAllocation.h  PoolAllocator.h  ThreadLocalTemp.cpp  ThreadLocalTemp.h
Src/Collections/: AllocatedArray.h  CheckedArray.h  FixedPodList.h  FixedRingBuffer.h  LongBoolMap.cpp  LongBoolMap.h  MSIHashmap.h  PagedList.h  PodList.h  PodQueue.h  Sort.h
Src/Compiler/: AnalyzeTypes.h  Compiler.h  ConstructExpressionTrees.h  Diagnostics.h  EntryPoint.h  Expression.h  ExpressionBuilder.h  FileInfo.h  FindEntryPointsJob.h  GatherCodeGenEntries.h  GatherTypeInfoJob.h  GenericTypeCache.h  MemberInfo.h  ParseFilesJob.h  PooledBlockAllocator.h  ResolveMemberTypesJob.h  ResolvedType.h  ScopeIntrospector.h  StringUtil.h  TypeContext.h  TypeInfo.h  TypeResolver.h  TypeUtil.h  Util.h  VisitEntry.h
Src/Compiler2/: BuiltInTypeName.cpp  BuiltInTypeName.h  Compilation.cpp  Compiler.cpp  Compiler.h  Expression.h  FieldInfo.h  FullyQualifiedName.cpp  FullyQualifiedName.h  LoadBuiltIns.cpp  LoadBuiltIns.h  MemberInfo.cpp  MemberInfo.h  ResolvedType.h  SourceFileInfo.cpp  SourceFileInfo.h  TypeInfo.cpp  TypeInfo.h  TypeResolutionMap.cpp  TypeResolutionMap.h  TypeResolver.cpp  TypeResolver.h
Src/Compiler2/Jobs/: CompileRootJob.cpp  CompileRootJob.h  GatherTypeInfo.cpp  GatherTypeInfoJob.h  IntrospectScopesJob.h  ParseFilesJob.cpp  ParseFilesJob.h  ResolveBaseTypesJob.h  ResolveMemberTypes.h  ScheduleIntrospectJobs.h
Src/FileSystem/: VirtualFileSystem.cpp  VirtualFileSystem.h
Src/JobSystem/: Job.cpp  Job.h  JobSystem.cpp  JobSystem.h  Worker.h
Src/Parsing/: AlchemyParser2.h  AlchemyParsing.cpp  AlchemyTokenizer.h  AstNode.h  BuiltInTypeName.h  CstNode.h  Keyword.h  KeywordMatch.h  KeywordString.h  MatchKeyword_Generated2.h  NodeIndex.h  NodeType.h  Nodes.generated.h  Nodes.h  ParseResult.h  ParseTypes.h  Parser.h  PsiBuilder2.h  SyntaxTreeBuilder.h  Token.h  TokenFlags.h
Src/Parsing/impl/: AlchemyParsing.cpp  Keyword.cpp  NodeType.cpp  Nodes.cpp  TokenType.cpp
Src/Parsing/private/: AlchemyTokenizer.h  KeywordMatch.inc  MatchKeyword_Generated2.h  Nodes.generated.h  PsiBuilder2.h
Src/Parsing2/: Builders.generated.h  Builders.h  Diagnostics.cpp  Diagnostics.h  ErrorCode.h  FindSkippedTokens.generated.cpp  FindSkippedTokens.h  GetFirstToken.generated.cpp  MatchKeyword.generated.cpp  NodeEquality.generated.cpp  NodeEquality.h  NodePrinter.generated.cpp  NodePrinter.h  Parser.cpp  Parser.h  Parsing.cpp  Parsing.h  Precidence.h  Scanning.cpp  Scanning.h  SymbolTable.h  SyntaxBase.h  SyntaxDiagnosticInfo.h  SyntaxFacts.cpp  SyntaxFacts.h  SyntaxKind.cpp  SyntaxKind.h  SyntaxNodes.h  SyntaxToken.h  TerminatorState.h  TextWindow.cpp  TextWindow.h  TokenKind.cpp  TokenStream.h  Tokenizer.cpp  Tokenizer.h
Src/Parsing3/: Diagnostics.cpp  Diagnostics.h  ErrorCode.h  FindSkippedTokens.cpp  FindSkippedTokens.h  LineColumn.h  NodePrinter.h  Parser.cpp  Parser.h  Parsing.cpp  Parsing.h  Precidence.h  Scanning.cpp  Scanning.h  SyntaxBase.h  SyntaxFacts.cpp  SyntaxFacts.h  SyntaxKind.h  SyntaxNodes.h  SyntaxToken.h  TerminatorState.h  TextWindow.h  TokenKind.h  Tokenizer.cpp  Tokenizer.h
Src/Parsing_Old/: AstNode.h  CstNode.h  Keyword.h  LiteralType.h  NodeIndex.h  Nodes.h  Token.h  TokenType.h
Src/Parsing_Old/impl/: AlchemyParsing.cpp  BuiltInTypeName.cpp  Keyword.cpp  ParseResult.cpp
Src/Parsing_Old/private/: AlchemyParserImpl.inc  MatchKeyword.generated.inc
Src/Unicode/: Unicode.cpp  Unicode.h
Src/Util/: File.cpp  File.h  FixedCharSpan.h  Hash.h  MathUtil.h  StringTable.cpp  StringTable.h  StringUtil.cpp  StringUtil.h  Writer.cpp  Writer.h
System/: array.wyx  bool.wyx  byte.wyx  char.wyx  double.wyx  extern.wyx  float.wyx  int.wyx  long.wyx  object.wyx  sbyte.wyx  short.wyx  string.wyx  uint.wyx  ulong.wyx  ushort.wyx  void.wyx
TestApp/: Main.ax  Util.ax
Tests/: Test.cpp  Test2.cpp  TestUtil.h
Tests/ParsingExpectations/: BinaryAdd.output  DeclareClassOnly.output  EmptyList.output  EmptyStringLiteral.output  Field.output  Field2.output  InterpolatedIdentifierStringLiteral.output  InterpolatedNestedStringLiteral.output  InterpolatedStringLiteral.output  SimpleStringLiteral.output  SingleList_Simple.output  SwitchExpression.output
Tests/TypeResolutionExpectations/: types.output
